tests/negative/typecheck/array.orng
fn main() -> Int {
    let x: [3]Char = ('1', '2', '3')
    x[1]
}